SERVER-46440 Routing info should be reloaded before retry of creating session collection index on stale config error